--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <label>Cor: </label>
       <input type="text" data-js="color"><br>
       <div class="button">
-        <button type="submit">Register Car</button>
+        <button class="submitButton" type="submit">Register Car</button>
       </div>
     </form>
   </div>
